--- a/email.html
+++ b/email.html
@@ -1,1 +1,1 @@
-<a href="https://tu-sitio-web.com/registro.php?correoEnlace=correo@ejemplo.com">Verificarse</a>
+<a href="https://darshana.io/registro.php?correoEnlace=correo@ejemplo.com">Verificarse</a>
